<resources>
    <string name="app_name">Looking 2 Play</string>
    <string name="action_settings">Ajustes</string>
    <!-- Strings used for login and register activity -->
    <string name="login_password">Contraseña </string>
    <string name="login">Ingresar</string>
    <string name="enter_name">Nombre de usuario</string>
    <!--    <string name="register_login">Nuevo usuario? <font fgcolor='#01C6DB'>Registrate!</font></string>-->
    <string name="register_login">Nuevo usuario?</string>
    <string name="register_email">Correo</string>
    <string name="register_button">Registrarse</string>
    <string name="login_register">Ya registrado?</string>

    <!-- Strings used messagin/notification service -->
    <string name="msg_token_fmt" translatable="true">FCM registration Token: %s</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <!-- Strings used for profile fragment -->
    <string name="edit_btn">Editar información</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Look to Play</string>
    <string name="select_view_title">Juegos Disponibles</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_rooms">Mis Salas</string>
    <string name="menu_requests">Solicitudes</string>
    <string name="menu_logout">Logout</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!--Form strings-->
    <string name="creation_form_label">Crear una sala</string>
    <string name="form_title">Seleccione un juego para crear la sala</string>
    <string name="form_description">Descripcion de la sala</string>
    <string name="form_name">Nombre de la sala</string>
    <string name="game1">Valorant</string>
    <string name="game2">Overwatch</string>
    <string name="game3">League of Legends</string>
    <string name="game4">Rocket League</string>
    <string-array name="gameList">
        <item>@string/game1</item>
        <item>@string/game2</item>
        <item>@string/game3</item>
        <item>@string/game4</item>
    </string-array>
    <string name="form_button">Crear Sala</string>
    <string name="title_activity_room_creation">RoomCreation</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="register">Registrate!</string>
    <string name="inicia_sesi_n">Inicia Sesión!</string>


    <string-array name="participantsOptions">
        <item>Eliminar participante</item>
    </string-array>

</resources>