<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_rooms"
            android:icon="@drawable/ic_action_rooms"
            app:showAsAction="always"
            android:title="@string/menu_rooms" />
        <item
            android:id="@+id/myRequests"
            android:icon="@drawable/ic_action_requests"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>