<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/form_ScrollView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:scrollbars="vertical"
tools:context=".RoomCreation">

<LinearLayout
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        android:textSize="10pt">
    </TextView>

    <EditText
        android:id="@+id/form_name"
        android:layout_height="wrap_content"
        android:hint="@string/form_name"
        android:inputType="textPersonName"
        android:layout_width="fill_parent">
    </EditText>


    <Spinner
        android:id="@+id/form_games"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/game1"
        android:entries="@array/gameList"/>

    <Spinner
        android:id="@+id/form_players"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/game1"
        android:entries="@array/gameList"/>

    <EditText
        android:id="@+id/form_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_description"
        android:inputType="textMultiLine"
        android:lines="5"></EditText>

    <Button
        android:id="@+id/form_button"
        android:layout_height="wrap_content"
        android:text="@string/form_button"
        android:layout_width="fill_parent">
    </Button>

</LinearLayout>

</ScrollView>