<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.l2p_app.GameListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/game_list" >
        <action
            android:id="@+id/action_nav_home_to_nav_rooms"
            app:destination="@id/nav_rooms" />
    </fragment>

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.example.l2p_app.RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" >
        <argument
            android:name="game"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/roomCreation"
        android:name="com.example.l2p_app.RoomCreation"
        android:label="@string/creation_form_label"
        tools:layout="@layout/fragment_room_creation" />
    <action
        android:id="@+id/action_global_roomCreation"
        app:destination="@id/roomCreation" />



</navigation>