<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


  <EditText
      android:id="@+id/name"
      android:drawableTint="@color/design_default_color_primary"
      android:drawableStart="@drawable/person"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/register_email"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.413"
      android:drawableLeft="@drawable/person"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/password"
      android:drawableStart="@drawable/lock"
      android:drawableTint="@color/design_default_color_primary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/login_password"
      android:inputType="textWebPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:layout_constraintVertical_bias="0.075"
      android:drawableLeft="@drawable/lock" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.126" />

  <TextView
      android:id="@+id/register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="70dp"
      android:layout_marginTop="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginBottom="8dp"
      android:text="@string/register_login"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.247"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintVertical_bias="0.504"
      android:layout_marginStart="70dp"
      android:layout_marginEnd="8dp" />

  <ProgressBar
      android:id="@+id/pBar"
      style="?android:attr/progressBarStyleLarge"
      android:minHeight="50dp"
      android:minWidth="200dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@id/btnLogin"
      app:layout_constraintTop_toTopOf="@id/register"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:indeterminate="true"
      android:visibility="gone"
      >
  </ProgressBar>

  <ImageView
      android:id="@+id/appLogo"
      android:layout_width="223dp"
      android:layout_height="153dp"
      android:src="@drawable/looking2play_logo"
      app:layout_constraintBottom_toTopOf="@+id/name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.53"
      app:srcCompat="@drawable/looking2play_logo"
      tools:srcCompat="@drawable/looking2play_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>